--- a/app/src/main/res/layout/dialog_add_habit.xml
+++ b/app/src/main/res/layout/dialog_add_habit.xml
@@ -29,11 +29,28 @@
                 android:drawableLeft="@drawable/ic_pencil"
                 android:drawablePadding="5dp"
                 android:hint="Название привычки"
-                app:layout_constraintBottom_toTopOf="@+id/saveHabitButton"
+                app:layout_constraintBottom_toTopOf="@+id/habit_description"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.0"
+                tools:ignore="TouchTargetSizeCheck" />
+            <EditText
+                android:id="@+id/habit_description"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginStart="15dp"
+                android:layout_marginVertical="32dp"
+                android:layout_marginEnd="15dp"
+                android:drawableLeft="@drawable/ic_pencil"
+                android:drawablePadding="5dp"
+                android:hint="Описание привычки"
+                app:layout_constraintBottom_toTopOf="@+id/saveHabitButton"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="10dp"
                 app:layout_constraintVertical_bias="0.0"
                 tools:ignore="TouchTargetSizeCheck" />
 
